# CatsMap

./: .gitignore  .replit  README.MD
.github/workflows/: deploy-catsmap-site.yml  jekyll-gh-pages.yml
docs/: index.html  package.json
docs/src/: main.jsx  styles.css
stuff/: README.md  dev.sh  start.sh
stuff/installer/: main.js  package.json
stuff/installer/renderer/: index.html  installer.js  style.css
stuff/mobile/: app.json  package.json
stuff/mobile/app/: chat.tsx  index.tsx
stuff/server/: Cargo.toml
stuff/server/data/: accounts.json
stuff/server/src/: auth.rs  config.rs  main.rs  models.rs  persist.rs  routes.rs  share_code.rs  state.rs  ws.rs
stuff/server/uploads/: 35784f29-691b-49fa-b89c-20051ad3dda1_Xojo.desktop.desktop  690e9811-32a2-4cfa-aaf5-f55de2fca461.webm  baeb6542-b1ca-456f-a72b-a666baf7067b.webm  ce2836c1-cc1e-4fc6-ad28-e8d5f1945529.webm  e185997a-8903-4839-a66f-674d75275ead_Zen.desktop.desktop
stuff/server/web/: index.html
stuff/server/web/assets/: index-4n2jOQ_R.js  index-8TQhxyKt.js  index-BBixuTxW.js  index-BHpNu-2t.js  index-BMu0sepG.css  index-BcsqBRB3.js  index-Cd9gbYqZ.js  index-CqZArx3s.css  index-CwpMT1FA.js  index-CxDj9Qwp.js  index-NuKbCjj2.css  index-SkAyZQhY.js  index-g0hq3Feg.js  index-jlG_6Sjj.js  index-o-b_HRbW.css
stuff/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
stuff/web/src/: App.tsx  api.ts  main.tsx  store.ts  types.ts
stuff/web/src/components/: AdminPanel.tsx  ChatApp.tsx  Sidebar.tsx  (+8 more)
website/: package.json  vite.config.js
website/src/: main.jsx  styles.css
(+4 files in other folders)
