[package]
name = "catsmap-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "catsmap"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
dashmap = "5"
tokio-stream = "0.1"
futures = "0.3"
base64 = "0.21"
mime_guess = "2"
bytes = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

